--- a/css/style.scss
+++ b/css/style.scss
@@ -41,6 +41,29 @@ button{
     font-weight: 200;
     word-spacing: 2px;
 }
+//images slider n product details
+#featured{
+    max-width: 500px;
+    max-height: 600px;
+    object-fit: cover;
+    cursor: pointer;
+    border: 2px solid black;
+}
+.thumbnail{
+    object-fit: cover;
+    max-width: 180px;
+    max-height: 100px;
+    cursor: pointer;
+    opacity: 0.5;
+    margin: 5px;
+    border: 2px solid black;
+}
+.thumbnail:hover{
+    opacity: 1;
+}
+.active{
+    opacity: 1;
+}
 //header
 .header{
     min-height: 30vh;
