--- a/css/style.scss
+++ b/css/style.scss
@@ -64,6 +64,29 @@ button{
 .active{
     opacity: 1;
 }
+#slide-wrapper{
+    max-width: 500px;
+    display: flex;
+    min-height: 100px;
+    align-items: center;
+}
+#slider{
+    width: 440px;
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: hidden;
+}
+.arrow{
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    transition: .3s;
+}
+.arrow:hover{
+    opacity: .5;
+    width: 35px;
+    height: 35px;
+}
 //header
 .header{
     min-height: 30vh;
